# BetterFlights

./: CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
src/data_collection/TAP/: daily_scraper.py
