[project]
name = "betterflights"
version = "0.1.0"
description = ""
authors = [
    {name = "Yan Sardinha"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.11.2"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
greenlet = "^3.1.1"
ipykernel = "^6.29.5"


[tool.taskipy.tasks]
ruff = 'ruff check'
test = 'pytest -s -x --cov=src -vv'

[tool.ruff]
line-length = 79

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.coverage.run]
concurrency = ["thread", "greenlet"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
